--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,6 +11,10 @@
                 </h3>
               </div>
               <div class="card-body">
+                <div class="alert alert-success" *ngIf="mensagemSucesso" >
+                  {{ mensagemSucesso }}
+                </div>
+
                 <div class="alert alert-danger" *ngIf="loginError" >
                   Login e/ou senha incorreto(a).
                 </div>
@@ -37,11 +41,13 @@
                       Enviar
                     </button>
 
-                    <button type="submit" class="btn btn-success" *ngIf="cadastrando">
+                    <button type="button" class="btn btn-success"
+                            (click)="cadastrar()"
+                            *ngIf="cadastrando">
                       Cadastrar
                     </button>
 
-                    <button type="submit"
+                    <button type="button"
                             class="btn btn-danger ml-1"
                             *ngIf="cadastrando"
                             (click)="cancelaCadastro()"
