--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,22 +11,22 @@
                 </h3>
               </div>
               <div class="card-body">
-                <div class="alert alert-success" *ngIf="mensagemSucesso" >
+                <div class="alert alert-success" *ngIf="mensagemSucesso">
                   {{ mensagemSucesso }}
                 </div>
 
-                <div class="alert alert-danger" *ngIf="loginError" >
-                  Login e/ou senha incorreto(a).
+                <div class="alert alert-danger" *ngFor="let error of errors">
+                  {{ error }}
                 </div>
 
                 <form #loginForm="ngForm" (submit)="onSubmit()">
 
                   <div class="form-group">
-                  <label class="small mb-1">Login</label>
-                  <input type="text" name="username"
-                         [(ngModel)]="username"
-                         class="form-control py-4"
-                         placeholder="Digite seu login">
+                    <label class="small mb-1">Login</label>
+                    <input type="text" name="username"
+                           [(ngModel)]="username"
+                           class="form-control py-4"
+                           placeholder="Digite seu login">
                   </div>
 
                   <div class="form-group">
@@ -49,7 +49,7 @@
 
                     <button type="button"
                             class="btn btn-danger ml-1"
-                            *ngIf="cadastrando"
+                            *ngIf="cadastr  ando"
                             (click)="cancelaCadastro()"
                     >
                       Cancelar
@@ -60,7 +60,7 @@
               </div>
               <div class="card-footer text-center">
                 <div class="small">
-                  <a href="#"  (click)="preparaCadastrar($event)" >
+                  <a href="#" (click)="preparaCadastrar($event)">
                     Não possui Usuário? Cadastre-se
                   </a>
                 </div>
